Fix mistakes.